@@ -5,10 +5,8 @@
  - http://www.zabbix.com/forum/showthread.php?p=7006#post7006
  - http://www.zabbix.com/forum/showthread.php?t=1997
  - dos style EOL: http://www.zabbix.com/forum/showthread.php?t=1993
- - unknown SNMP type: http://www.zabbix.com/forum/showthread.php?t=1990
  - http://www.zabbix.com/forum/showthread.php?t=1992
  - http://www.zabbix.com/forum/showthread.php?t=1657
- - Graphs: http://www.zabbix.com/forum/showthread.php?t=1781
  - http://www.zabbix.com/forum/showthread.php?t=1971
  - make failed: http://www.zabbix.com/forum/showthread.php?t=1957
  - check if ZABBIX server accepts values returned by W32 agent
